# das-kino

./: LICENSE
backend/ingestion_service/: .gitignore  LICENSE  Main.hs  Makefile  config.dhall  docker-compose.yaml  fourmolu.yaml  ingestion-service.cabal
backend/ingestion_service/src/adapter/Adapter/: Clock.hs  Database.hs  HTTP.hs  TMDB.hs
backend/ingestion_service/src/domain/Domain/: Configuration.hs  Enrichement.hs  Ingestion.hs  Movie.hs  PushNotification.hs  Scraper.hs
backend/ingestion_service/src/domain/Port/: Clock.hs  Database.hs  HTTP.hs  TMDB.hs
backend/ingestion_service/src/domain/Port/DTO/: Collection.hs  Configuration.hs  Genre.hs  Image.hs  ImageAppendix.hs  Movie.hs  MovieDetail.hs  MovieStatus.hs  Page.hs  ProductionCompany.hs  ProductionCountry.hs  SpokenLanguage.hs  Video.hs  VideoAppendix.hs
backend/ingestion_service/src/overture/Overture/: Alternative.hs  Bool.hs  Data.hs  Deriving.hs  Either.hs  Monad.hs  Text.hs  Time.hs
backend/ingestion_service/test/unit_tests/: DasKinoScraperSpec.hs  Spec.hs  TMDBClientSpec.hs
backend/ingestion_service/test/unit_tests/res/das_kino/: dr_strange_2D_and_3D.html  jurassic_world__expired-showtimes.html  top_gun_next_week.html
backend/ingestion_service/test/unit_tests/res/tmdb/: everything_everywhere_all_at_once_details.json  everything_everywhere_search.json  raiders_of_the_lost_ark_details.json  raiders_of_the_lost_ark_search.json  the_batman_details.json  the_batman_search.json
